<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.HomeFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/home_text" />
    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonListCountry"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60dp"
        android:layout_marginHorizontal="@dimen/_32dp"
        android:backgroundTint="@color/color_ff9800"
        android:fontFamily="@font/baloothambi2_medium"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/list_country_text"
        android:textAllCaps="true"
        app:cornerRadius="@dimen/_16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCollection"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60dp"
        android:layout_marginHorizontal="@dimen/_32dp"
        android:layout_marginTop="@dimen/_16dp"
        android:backgroundTint="@color/color_9c27b0"
        android:fontFamily="@font/baloothambi2_medium"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/saved_country_text"
        android:textAllCaps="true"
        app:cornerRadius="@dimen/_16dp" />

</LinearLayout>