<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.OptionsDialogFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                style="@style/TextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_32dp"
                android:layout_marginTop="@dimen/_12dp"
                android:gravity="center"
                android:text="@string/do_you_want_to_delete_this_country_text" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginBottom="@dimen/_24dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonYes"
                    android:layout_width="120dp"
                    android:layout_height="@dimen/_48dp"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:backgroundTint="@color/color_blue"
                    android:insetTop="0dp"
                    android:textColor="@color/white"
                    android:insetBottom="0dp"
                    android:text="@string/yes_text"
                    android:textSize="@dimen/_16sp"
                    app:cornerRadius="@dimen/_12dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonNo"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="@dimen/_120dp"
                    android:layout_height="@dimen/_48dp"
                    android:layout_marginStart="@dimen/_8dp"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:textColor="@color/color_787878"
                    android:text="@string/no_text"
                    android:textSize="@dimen/_16sp"
                    app:cornerRadius="@dimen/_12dp"
                    app:strokeColor="@color/color_a3a3a3"
                    app:strokeWidth="@dimen/_2dp" />
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>